@@ -56,6 +56,7 @@ static void compatInit(Compatibility_t &c)
     c.fix_autoscroll_speed = false;
     c.fix_blooper_stomp_effect = true;
     c.keep_bullet_bill_dir = true;
+    c.fix_pswitch_dragon_coin = true;
 
     if(g_speedRunnerMode >= SPEEDRUN_MODE_2) // Make sure that bugs were same as on SMBX2 Beta 4 on this moment
     {
@@ -76,6 +77,7 @@ static void compatInit(Compatibility_t &c)
         c.fix_autoscroll_speed = false;
         c.fix_blooper_stomp_effect = false;
         c.keep_bullet_bill_dir = false;
+        c.fix_pswitch_dragon_coin = false;
     }
 
     if(g_speedRunnerMode >= SPEEDRUN_MODE_3) // Strict vanilla SMBX
@@ -123,6 +125,7 @@ static void loadCompatIni(Compatibility_t &c, const std::string &fileName)
         compat.read("fix-autoscroll-speed", c.fix_autoscroll_speed, c.fix_autoscroll_speed);
         compat.read("fix-blooper-stomp-effect", c.fix_blooper_stomp_effect, c.fix_blooper_stomp_effect);
         compat.read("keep-bullet-bill-direction", c.keep_bullet_bill_dir, c.keep_bullet_bill_dir);
+        compat.read("fix-pswitch-dragon-coin", c.fix_pswitch_dragon_coin, c.fix_pswitch_dragon_coin);
     }
     compat.read("fix-player-filter-bounce", c.fix_player_filter_bounce, c.fix_player_filter_bounce);
     compat.read("fix-player-downward-clip", c.fix_player_downward_clip, c.fix_player_downward_clip);
